added remaining model files

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,33 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "get_df() missing 3 required positional arguments: 'client', 'sheet', and 'worksheet'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/kristiyandimitrov/krisjobs/colab/test.ipynb Cell 1\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/kristiyandimitrov/krisjobs/colab/test.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhelpers\u001b[39;00m \u001b[39mimport\u001b[39;00m get_df\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/kristiyandimitrov/krisjobs/colab/test.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m get_df()\n",
-      "\u001b[0;31mTypeError\u001b[0m: get_df() missing 3 required positional arguments: 'client', 'sheet', and 'worksheet'"
-     ]
-    }
-   ],
-   "source": [
-    "from helpers import get_df\n",
-    "\n",
-    "get_df()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(9)"
+   ]
   },
   {
    "cell_type": "code",
