large increment character-build

--- a/notebooks/forge.ipynb
+++ b/notebooks/forge.ipynb
@@ -6,7 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(9)"
+    "# @title TIER 1 - Basic\n",
+    "\n",
+    "name = \"Kano\" # @param {type: \"string\"}\n",
+    "level = 4 # @param {type: \"slider\", min: 1, max: 10}\n",
+    "body_type = \"HUMANOID\" # @param [\"HUMANOID\", \"BEASTUMANOID\", \"SENTRY\", \"MECHARACHNID\", \"AVIAN\", \"QUADRUPED\"]\n",
+    "\n",
+    "\n",
+    "race = \"SAVAGE\" #@param [\"PURIST\", \"SAVAGE\", \"ANIMUS\", \"ZBORG\"]\n",
+    "alignment = \"SAVAGE\" #@param [\"PURIST\", \"SAVAGE\", \"ANIMUS\", \"ZBORG\"]\n"
    ]
   },
   {
@@ -14,9 +22,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "5 + 5"
-   ]
+   "source": []
   }
  ],
  "metadata": {
