--- a/notebooks/tracker.ipynb
+++ b/notebooks/tracker.ipynb
@@ -2,22 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "modifiers_selection() missing 4 required positional arguments: 'client', 'traits_selection', 'attributes_selection', and 'items_selection'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 11\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mshared\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mclient\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GoogleSheetsClient\n\u001b[1;32m      9\u001b[0m client \u001b[38;5;241m=\u001b[39m GoogleSheetsClient()\n\u001b[0;32m---> 11\u001b[0m \u001b[43mmodifiers_selection\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: modifiers_selection() missing 4 required positional arguments: 'client', 'traits_selection', 'attributes_selection', and 'items_selection'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "75e60ac6aebc489da3090d709cd962c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(VBox(children=(HBox(children=(Button(description='Add Trait', style=ButtonStyle()), Button(descr…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import sys\n",
     "import os\n",
     "import pandas as pd\n",
@@ -26,19 +40,13 @@
     "from src.ui.character_fields import modifiers_selection\n",
     "from src.shared.client import GoogleSheetsClient\n",
     "\n",
-    "client = GoogleSheetsClient()\n",
+    "client = GoogleSheetsClient(test_mode=True)\n",
     "\n",
-    "modifiers_selection(client, [], [], [])\n",
+    "modifiers_selection(client, {}, {}, {})\n",
     "\n",
+    "# modifiers_selection(client)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
