added first preview tab draft

--- a/notebooks/forge.ipynb
+++ b/notebooks/forge.ipynb
@@ -2,13 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f44b09e320cd4e80b4a218f2752724cb",
+       "model_id": "0ff2df01f4a041d28d7e879d6697bb7c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -18,9 +26,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Kano', 'level': 4, 'body_type': 'HUMANOID', 'race': 'SAVAGE', 'alignment': 'SAVAGE'}\n",
+      "{'name': 'Kano', 'level': 4, 'body_type': 'HUMANOID', 'race': 'SAVAGE', 'alignment': 'SAVAGE'}\n"
+     ]
     }
    ],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"../\"))\n",
+    "\n",
     "from src.ui.character_wizard import CharacterWizard\n",
     "\n",
     "wizard = CharacterWizard({})"
@@ -28,30 +52,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e02712ad6f994a5b956518b57107c248",
+       "model_id": "6fecdf9afc9e469284f83287cc561d18",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Stack(children=(Button(description='Click here', style=ButtonStyle()), IntSlider(value=0)), selected_index=0, …"
+       "Button(button_style='success', description='Play', icon='rotate-left', style=ButtonStyle())"
       ]
      },
-     "execution_count": 39,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3d4f45f77ce4536aa30643e8e30daf5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='danger', description='Stop', icon='ban', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "button = widgets.Button(description='Click here')\n",
-    "slider = widgets.IntSlider()\n",
-    "stack = widgets.Stack([button, slider], selected_index=0)\n",
-    "stack  # will show only the button"
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "# Create buttons with icons\n",
+    "play_button = widgets.Button(\n",
+    "    description='Play',\n",
+    "    icon='rotate-left',  # Specify the Font Awesome icon name here without the 'fa-' prefix\n",
+    "    button_style='success',  # Optional style\n",
+    ")\n",
+    "\n",
+    "stop_button = widgets.Button(\n",
+    "    description='Stop',\n",
+    "    icon='ban',\n",
+    "    button_style='danger',\n",
+    ")\n",
+    "\n",
+    "# Display the buttons\n",
+    "display(play_button, stop_button)\n"
    ]
   },
   {
