implemented remove and onchange in build selection

--- a/notebooks/forge.ipynb
+++ b/notebooks/forge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -16,7 +16,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ff2df01f4a041d28d7e879d6697bb7c",
+       "model_id": "199a8b0065744d6488d6dbc49467e19d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -31,8 +31,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Kano', 'level': 4, 'body_type': 'HUMANOID', 'race': 'SAVAGE', 'alignment': 'SAVAGE'}\n",
-      "{'name': 'Kano', 'level': 4, 'body_type': 'HUMANOID', 'race': 'SAVAGE', 'alignment': 'SAVAGE'}\n"
+      "Selection changed: Vulnerable (physical)\n",
+      "Selection changed: Resistant (elemental)\n",
+      "Selection changed: Feeble\n",
+      "Selection changed: crudeWeapons proficient\n",
+      "Selection changed: Giant club\n",
+      "Selection changed: Club\n",
+      "Selection changed: Hatchet\n"
      ]
     }
    ],
