implemented preview tab sync

--- a/notebooks/forge.ipynb
+++ b/notebooks/forge.ipynb
@@ -2,21 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Stats dasda31\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "199a8b0065744d6488d6dbc49467e19d",
+       "model_id": "d7e18c200d9e4a6fb9ede4d45e17ba26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -26,19 +25,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selection changed: Vulnerable (physical)\n",
-      "Selection changed: Resistant (elemental)\n",
-      "Selection changed: Feeble\n",
-      "Selection changed: crudeWeapons proficient\n",
-      "Selection changed: Giant club\n",
-      "Selection changed: Club\n",
-      "Selection changed: Hatchet\n"
-     ]
     }
    ],
    "source": [
@@ -53,6 +39,65 @@
     "from src.ui.character_wizard import CharacterWizard\n",
     "\n",
     "wizard = CharacterWizard({})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6075bf44428b4b649f341f9bcc62e09b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(VBox(children=(Label(value='Content for Stats'), Output())), VBox(children=(Label(value='Conten…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "def render_preview():\n",
+    "    # Accordion sections titles\n",
+    "    sections = [\n",
+    "        \"Stats\",\n",
+    "        \"Caps\",\n",
+    "        \"Budgets\",\n",
+    "        \"General Proficiencies\",\n",
+    "        \"Combat Proficiencies\",\n",
+    "        \"Skills\",\n",
+    "        \"Abilities\",\n",
+    "    ]\n",
+    "\n",
+    "    # Create individual output widgets for each section\n",
+    "    output_widgets = {section: widgets.Output() for section in sections}\n",
+    "\n",
+    "    # Create a simple function to update the output of a given section\n",
+    "    def on_sync(section, message):\n",
+    "        with output_widgets[section]:\n",
+    "            output_widgets[section].clear_output()\n",
+    "            print(f\"Syncing model... {message}\")\n",
+    "\n",
+    "    # Create a VBox to display all output widgets for demonstration\n",
+    "    vboxes = [widgets.VBox([widgets.Label(f\"Content for {section}\"), output_widgets[section]]) for section in sections]\n",
+    "\n",
+    "    # Create a container for all VBoxes\n",
+    "    container = widgets.VBox(vboxes)\n",
+    "\n",
+    "    return container, on_sync, output_widgets\n",
+    "\n",
+    "# Usage\n",
+    "container, on_sync, output_widgets = render_preview()\n",
+    "on_sync(\"Stats\", \"dasda31\")\n",
+    "container\n"
    ]
   },
   {
